--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Annotation tool for donkey car.",
   "main": "index.js",
+  "bin": {
+    "donkey-annotator": "./bin/cli.js"
+  },
   "scripts": {
     "test": "mocha"
   },
@@ -28,6 +31,8 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "commander": "^2.17.1",
+    "express": "^4.16.3",
+    "lodash": "^4.17.10"
   }
 }
