--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "commander": "^2.17.1",
     "express": "^4.16.3",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "rfc6902": "^2.4.0"
   }
 }
